--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,26 +5,30 @@
     
     /* Colors */
     --primary-color     : hsl(335, 46%, 5%);
-    --primary-color-alt : hsl(335, 47%, 17%);
+    --primary-color-alt : hsla(335, 24%, 24%, 0.308);
     --text-color-white  : hsl(0, 0%, 92%); 
-    --text-color-black  : hsl(0,0%,0%); 
+    --text-color-black  : rgba(0, 0, 0, 0.746); 
     --body-bg-color     : hsl(0, 0%, 88%);
     --color             : var(--primary-color);
     --color-alt         : var(--primary-color-alt);
+    /* --color-bottom      : hsl(0, 12%, 54%) */
 
     /* Font size */
-    --h1-font-size      : 2rem;
-    --h2-font-size      : 1.5rem;
-    --h3-font-size      : 1.25rem;
-    --h4-font-size      : 1.15rem;
-    --big-font-size     : 1.15rem;
-    --normal-font-size  : 1rem;
-    --small-font-size   : 0.75rem;
-    --smaller-font-size : 0.6875rem;
+    --header-height         : 4rem;
+    --section-spacing       : 8rem;
+    --block-spacing         : 4rem;
+    --h1-font-size          : 3rem;
+    --h2-font-size          : 2rem;
+    --h3-font-size          : 1.5rem;
+    --h4-font-size          : 1.25rem;
+    --big-font-size         : 1.25rem;
+    --normal-font-size      : 1rem;
+    --small-font-size       : 0.875rem;
+    --smaller-font-size     : 0.75rem;
 }
 
 body {
-    color           : var(--color);
+    /* color           : var(--color); */
     font-family     : var(--text-color-black);
     font-size       : var(--normal-font-size);
     background-color: var(--body-bg-color);
@@ -45,7 +49,7 @@ h4,
 h5,
 h6 {
   margin-top  : 0;
-  color       : var(--title-color);
+  color       : var(--color);
   font-family : var(--title-font);
   font-weight : 800;
 }
@@ -68,67 +72,108 @@ h4 {
 
 .grid-body {
     display             : grid;
-
 }
 
 .content-header {
-    background          : yellowgreen;
     display             : grid;
-    /* grid-template-rows  : 300px 100px 50px; */
 }
 
+
 .title-header {
-    text-align: center;
-    color: var(--primary-color);
-    font-family: var(--title-font);
+    text-align  : center;
+    color       : var(--primary-color);
+    font-family : var(--title-font);
+    margin      : 45px 20px 20px;
+    padding     : 30px;
 
 }
 
 .text-header {
-    text-align: center;
+    text-align  : center;
+    margin      : 30px ;
+    padding     : 20px 70px;
+    font-size   : var(--big-font-size) ;
 }
 
 .button {
-    text-align: center;
+    text-align  : center;
+    margin      : 35px 50px 50px;
+}
+
+.button-black {
+    display         : inline-block;
+    padding         : 0.85rem 1.5rem;
+    border-radius   : 0.5rem;
+    text-decoration : none;
+    font-weight     : 600;
+    font-size       : var(--title-font) ;
+    color           : var(--text-color-white);
+    border          : 1px solid var(--color);
+    background-color: var(--color);
+}
+
+.button-black:hover {
+    background-color: var(--body-bg-color);
+    color           : var(--text-color-black) ;
+    box-shadow      : 0 0 16px var(--color);
 }
 
 .grid-main {
-    background: red;
-    display: grid;
+    display     : grid;
 }
 
 .section-info {
-    background: pink;
+    background  : var(--color-alt);
+
 }
 
 .title-info {
-    text-align: center;
+    text-align   : center;
+    padding      : 1rem ;
+    margin-bottom: 1rem ;
+
 }
 
 .content-info {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display                 : grid;
+    grid-template-columns   : 1fr 1fr;
+    grid-gap                : 0.5rem ;
+    overflow                : auto;
+    text-align              : center;
+
 }
 
+.content-info-1 {
+    margin  : 1rem;
+    /* padding-left : 1rem; */
+
+}
+
+.content-info-2 {
+    margin  : 1rem;
+    /* padding-right : 10rem; */
+}
+
+
 .section-services {
-    background: royalblue;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    background              : royalblue;
+    display                 : grid;
+    grid-template-columns   : 1fr 1fr 1fr;
 }
 
 .section-promo {
-    background: grey;
-    text-align: center;
+    background  : grey;
+    text-align  : center;
 }
 
 .section-us {
-    background: wheat;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    background              :wheat;
+    display                 :grid;
+    grid-template-columns   : 1fr 1fr;
 }
 
 .section-footer {
-    background: palevioletred;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    background              : palevioletred;
+    display                 : grid;
+    grid-template-columns   : 1fr 1fr;
 }
