--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,21 +5,22 @@
 
 :root {
     /* Fonts */
-    --title-font: 'Yusei Magic', sans-serif;
-    --body-font : 'Poppins', sans-serif;
+    --title-font: 'Yusei Magic', arial, helvetica;
+    --body-font : 'Poppins', sans-serif, georgia;
 
     /* Colors */
-    --primary-color        : hsl(335, 46%, 5%);
-    --primary-color-alt    : hsla(335, 24%, 24%, 0.308);
-    --text-color-white     : hsl(0, 0%, 92%);
-    --text-color-black     : rgba(0, 0, 0, 0.746);
-    --body-bg-color        : hsl(0, 0%, 88%);
-    --color                : var(--primary-color);
-    --color-alt            : var(--primary-color-alt);
-    --color-alt-services   : hsl(330, 2%, 21%);
-    --color-contact        : hsla(293, 52%, 21%, 0.445);
-    --color-proyect-by     : hsl(300, 100%, 40%);
-    /* --color-bottom      : hsl(0, 12%, 54%) */
+    --primary-color       : hsl(335, 46%, 5%);
+    --primary-color-alt   : hsla(335, 24%, 24%, 0.308);
+    --text-color-white    : hsl(0, 0%, 92%);
+    --text-color-black    : rgba(0, 0, 0, 0.746);
+    --body-bg-color       : hsl(0, 0%, 88%);
+    --color               : var(--primary-color);
+    --color-alt           : var(--primary-color-alt);
+    --color-alt-services  : hsl(330, 2%, 21%);
+    --color-contact       : hsla(293, 52%, 21%, 0.445);
+    --color-proyect-by    : hsl(300, 100%, 40%);
+    --color-services-title: hsla(320, 3%, 21%, 0.246);
+    --color-services-p    :hsla(320, 3%, 21%, 0.08);
 
     /* Font size */
     --h1-font-size     : 2rem;
@@ -35,7 +36,6 @@
 
 @media screen and (min-width: 1024px) {
 
-    /*  Variables de tamaño en desktop  */
     :root {
         --h1-font-size     : 2.3rem;
         --h2-font-size     : 2rem;
@@ -136,19 +136,19 @@ h4 {
 
 .button {
     text-align: center;
-    margin    : 1rem 2rem 1rem;
+    margin    : 1em 2em 1em;
 }
 
 .button-black {
     display        : inline-block;
-    padding        : 1rem 1.7rem;
+    padding        : 1em 1.7em;
     border-color   : var(--text-color-white);
-    border-radius  : 0.5rem;
+    border-radius  : 0.5em;
     text-decoration: none;
     font-weight    : 600;
     font-size      : var(--normal-font-size);
     color          : var(--text-color-white);
-    border         : 1px solid var(--color);
+    border         : 0.063em solid var(--color);
     background     : var(--color);
 }
 
@@ -193,7 +193,7 @@ h4 {
 .section-info {
     background: var(--color-alt);
     display   : grid;
-    padding    : 0.5rem 3rem 2.5rem;
+    padding   : 0.5rem 3rem 2.5rem;
 
 }
 
@@ -204,10 +204,10 @@ h4 {
 }
 
 .content-info {
-    display   : grid;
-    overflow  : auto;
-    text-align: center;
-    margin    : 1rem;
+    display    : grid;
+    overflow   : auto;
+    text-align : center;
+    margin     : 1rem;
     padding-top: 1rem;
 
 }
@@ -235,8 +235,8 @@ h4 {
 
 
 .section-services {
-    background-color: var(--color-alt-services);
-    display: grid;
+    background-color  : var(--color-alt-services);
+    display           : grid;
     grid-template-rows: repeat(3, 1fr);
 }
 
@@ -245,6 +245,11 @@ h4 {
     background-color: var(--body-bg-color);
 
 }
+
+.content-services:hover {
+    box-shadow: 0 0 50px var(--color);
+}
+
 
 .image-container {
     position      : relative;
@@ -263,30 +268,41 @@ h4 {
     object-fit: cover;
 }
 
-.text-container {
-    text-align    : center;
-    padding       : 1rem 2rem;
-    letter-spacing: 1px;
 
+.text-container {
+    position      : relative;
+    padding       : 0;
+    letter-spacing: 1px;
+}
+
+
+.title-services {
+    display         : flex;
+    justify-content : center;
+    padding         : 1rem;
+    background-color: var(--color-services-title);
 }
 
 .text-container p {
-    padding: 2rem 2rem;
-    font-size: calc(var(--normal-font-size)*0.95)
+    padding         : 2rem 2rem;
+    font-size       : calc(var(--normal-font-size)*0.95);
+    background-color: var(--color-services-p);
+
 }
 
+
 .content-services-1 {
-    grid-row  : 1 / 2;
+    grid-row: 1 / 2;
 }
 
 @media screen and (min-width:1024px) {
 
     .section-services {
-        display: grid;
+        display              : grid;
         grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: 1fr;
-        grid-gap: .2rem;
-        padding: 2.2rem 10rem ;
+        grid-template-rows   : 1fr;
+        grid-gap             : .2rem;
+        padding              : 2.2rem 10rem;
     }
 
 }
@@ -320,9 +336,9 @@ h4 {
 
 @media screen and (min-width:1024px) {
 
-    .section-us{
+    .section-us {
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr;
+        grid-template-rows   : 1fr;
     }
 
 }
@@ -349,7 +365,7 @@ h4 {
 
 .section-footer {
     background        : var(--color);
-    color             : white;
+    color             : var(--text-color-white);
     display           : grid;
     grid-template-rows: 1fr 1fr;
     text-align        : center;
@@ -364,9 +380,9 @@ h4 {
 
 @media screen and (min-width:1024px) {
 
-    .section-footer{
+    .section-footer {
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr;
+        grid-template-rows   : 1fr;
     }
 
 }
